--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nature Travel</title>
     <link rel="stylesheet" href="styles/style.css">
+    
 </head>
 <body>
     <!-- header starts here -->
@@ -183,7 +184,7 @@
             <div class="footer-title"><img src="Images/Group 40071 (2).png" alt="">
                 <h3 class="nature">Nature<span class="travel">Travel</span></h3>
             </div>
-            <p>With the increasing population, the threats towards nature are increasing. With the growth in population, the resources are now depleting.</p>
+            <p>With the increasing population, the threats towards nature are increasing. With the growth in population, <br> the resources are now depleting.</p>
             
                 <div class="footer-icon">
                     <img src="Images/facebook.svg" alt="">
